<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>modelengine.fit.jade.waterflow</groupId>
    <artifactId>jade-waterflow-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>waterflow-runtime-service</module>
        <module>waterflow-dependency</module>
        <module>waterflow-service</module>
        <module>waterflow-definition-service</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>

        <!-- Framework version -->
        <fit.version>3.5.0-SNAPSHOT</fit.version>
        <waterflow.version>1.0.0-SNAPSHOT</waterflow.version>

        <!-- Jacoco version -->
        <jacoco.version>0.8.10</jacoco.version>

        <!-- Maven plugin versions -->
        <maven.antrun.version>3.1.0</maven.antrun.version>
        <maven.compiler.version>3.12.1</maven.compiler.version>
        <maven.dependency.version>3.6.1</maven.dependency.version>
        <maven.jar.version>3.3.0</maven.jar.version>
        <maven.surefire.version>3.2.5</maven.surefire.version>
        <maven.source.version>3.3.0</maven.source.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>modelengine.fit.jade.waterflow</groupId>
                <artifactId>waterflow-dependency</artifactId>
                <version>${waterflow.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <!-- 打印每个测试结果，包括方法名 -->
                    <printSummary>true</printSummary>
                    <!-- 将输出打印到控制台 -->
                    <useFile>false</useFile>
                    <!-- 设置详细报告格式 -->
                    <reportFormat>plain</reportFormat>
                    <!-- 启用详细测试输出，显示每个测试方法 -->
                    <forkCount>1</forkCount> <!-- 单线程显示测试名称 -->
                    <forkedProcessTimeoutInSeconds>300000</forkedProcessTimeoutInSeconds>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>argLine</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
